<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menu_tv_title"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:fontFamily="@font/almendra_italic"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="#D10000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/menu_tv_username"
        android:layout_width="363dp"
        android:layout_height="36dp"
        android:fontFamily="@font/almendra_italic"
        android:textAlignment="center"
        android:textColor="#D10000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menu_tv_title"
        app:layout_constraintStart_toStartOf="@+id/menu_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/menu_tv_title"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/menu_btn_filter"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/filters_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menu_tv_username"
        app:layout_constraintStart_toStartOf="@+id/menu_tv_username"
        app:layout_constraintTop_toBottomOf="@+id/menu_tv_username"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/menu_btn_gallery"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/gallery_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menu_btn_filter"
        app:layout_constraintStart_toStartOf="@+id/menu_btn_filter"
        app:layout_constraintTop_toBottomOf="@+id/menu_btn_filter"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/menu_btn_settings"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:background="@android:drawable/bottom_bar"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menu_tv_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_tv_username"
        app:layout_constraintTop_toBottomOf="@+id/menu_btn_gallery"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/menu_btn_exit"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/exit_btn"
        app:layout_constraintBottom_toBottomOf="@+id/menu_btn_settings"
        app:layout_constraintEnd_toEndOf="@+id/menu_tv_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/menu_tv_username"
        app:layout_constraintTop_toTopOf="@+id/menu_btn_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>