<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_et_username"
        app:layout_constraintStart_toStartOf="@+id/login_et_username"
        app:layout_constraintTop_toBottomOf="@+id/login_et_username"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_tv_titel"
        app:layout_constraintStart_toStartOf="@+id/login_tv_titel"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_titel"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/login_tv_titel"
        android:layout_width="235dp"
        android:layout_height="52dp"
        android:fontFamily="@font/almendra_italic"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#D10000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:text="@string/login_bnt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_et_username"
        app:layout_constraintStart_toStartOf="@+id/login_et_username"
        app:layout_constraintTop_toBottomOf="@+id/login_et_password"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/login_btn_back"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:text="@string/back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
        app:layout_constraintVertical_bias="0.26" />
</androidx.constraintlayout.widget.ConstraintLayout>